--- a/styles/home.css
+++ b/styles/home.css
@@ -27,7 +27,8 @@ button, input, select, textarea {
   flex-direction: column;
   min-height: 100vh;
   overflow-y: auto;
-  padding-bottom: 100px; 
+  padding-bottom: calc(100px + env(safe-area-inset-bottom));
+  padding-bottom: calc(100px + constant(safe-area-inset-bottom));
 }
 
 
